Follow up last commit issues fix, cleancode refactoring of tokenController
